k8s/infrastructure/controllers/node-feature-discovery/CiliumNetworkPolicy.gc.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-nfd-gc-ingress
  namespace: nfd
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: node-feature-discovery, role: gc}}
  ingress:
    - {fromEntities: [host], toPorts: [ports: [{port: '8080', protocol: TCP}]]}  # Host probes
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-nfd-gc-egress
  namespace: nfd
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: node-feature-discovery, role: gc}}
  egress:
    - {toEntities: [kube-apiserver]}
